--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -533,6 +533,88 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Common subexpression elimination\n",
+    "The basic logic for this area is as follows:\n",
+    "\n",
+    "Create a list of expressions, initially empty.\n",
+    "Go through the current block and record every instruction, the format is:\n",
+    "\n",
+    "subexpressions = [[Instruction, [lines]], [Instruction2, [lines]], [Instruction3, [lines]], ...]\n",
+    "\n",
+    "(this will eventually only grab relevant ones, add and such)\n",
+    "\n",
+    "This only records if there is no duplicate line, if there is the line is instead appended to the relevant lines list in the set.\n",
+    "\n",
+    "At the same time, each used register used is recorded in a different list in a similar format.\n",
+    "\n",
+    "```\n",
+    "used_registers = [[Register, [lines]], [Register2, [lines]], [Register3, [lines]], ...]\n",
+    "```\n",
+    "\n",
+    "Quickly check that there is at least 1 entry in subexpressions with more than 1 entry in [lines], otherwise there are no common subexpressions and the optimization is redundant.  Any subexpression with a len([lines]) = 1 is removed from the list.\n",
+    "\n",
+    "Not relevant for this particular compiler, but an important note:\n",
+    "Go through the block and check for any instances of data being stored to memory then it being loaded, this is an indication that there are not enough registers for the function of this block, and common subexpression elimination will not assist as it performs best when replacing them with register stored values, not from memory.  In fact, doing so can slow the program down in some cases.  If this occurs, the optimization does not continue.\n",
+    "\n",
+    "The list of registers is crucial as it will determine what registers are free to use, what registers can be used at some points and not others, and others still that are used throughout and cannot be modified.  Since this all occurs after smart registry use optimization, we can assume that the range of lines between occurances are considered \"blocked\" for use.  Effectively, this means that the first and last occurance is blocked off and we cannot use that register for any other purpose during those lines. But before and after the blocked section is fair game.\n",
+    "\n",
+    "This list of subexpressions is then sorted based on the len of the [lines] list for each instruction, with priority being given to those with the most (i.e. the most common subexpressions).  This ordering is important as it ensures that the best optimizations are taken in case of there being more CSEs than usable registers.\n",
+    "\n",
+    "Now for each CSE:\n",
+    "    \n",
+    "Store the CSE in this scope (it may be modified later but will still be useful to store here)\n",
+    "For each range in the CSE (if there are occurances on 12, 18, 20, 25, you would have 3 different steps here):\n",
+    "    Now we must check if the CSE is actually valid in this range, and that no changes to the used variables occured. For instance:\n",
+    "```\n",
+    "        a = x + y\n",
+    "        b = x + y\n",
+    "```\n",
+    "\n",
+    "x + y is a valid CSE.\n",
+    "```\n",
+    "        a = x + y + i\n",
+    "        b = x + y + j\n",
+    "```\n",
+    "x + y is also a valid CSE.  However, instances can occur where:\n",
+    "```\n",
+    "        a = x + y + i\n",
+    "        ...\n",
+    "        x = x + 6\n",
+    "        y = 20 + var\n",
+    "        ...\n",
+    "\n",
+    "        b = x + y + j\n",
+    "```\n",
+    "x + y is NOT a valid CSE, as the value of x and y has changed.\n",
+    "\n",
+    "This is important to check, as not checking could lead to incorrect code, as it would use the initial values of x + y.\n",
+    "We therefore check all the lines between the initial and final line to determine no changes have occured.  If any have, we skip this range.\n",
+    "\n",
+    "The current range determines what register should be used.  Priority is given to those with the \"best fit\", the registers that are free for the shortest period before and after (but still free throughout) this range. This allows for other CSEs to potentially use registers that we otherwise may have blocked off.  If no used registers exist that are free, an usused register is used if it exists.  If none do, the CSE range is skipped and the next CSE proceeds.\n",
+    "\n",
+    "Now we add a line before the first occurance of the CSE where we store the value of that subexpression to this register. We shift the line numbers of all values in both the CSE and register list appropriately.  Then, we add this register to the list (or add it's line number if it already is used elsewhere), and modify the first and second occurance of the CSE to instead use the value stored in this register.\n",
+    "\n",
+    "Proceed to the next range or next CSE if no more exist.\n",
+    "\n",
+    "This method will result in all (or at least as many as our registers allow) common subexpressions to be replaced with more efficient registry uses instead of recalculating the same instructions.  This method may also be looped infinitely to eliminate more complex CSEs, such as a = x + y + z + i; b = x + y + z + j, and stopped when no changes are made in a loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def commonSubExpressionElimination():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
