Summary of common subexpression elim

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -238,12 +238,16 @@
     "def runOptimizations():\n",
     "    removeUnusedProcedures()\n",
     "    deadStoreElimination()\n",
-    "    removeUnusedVariables(genDataDecl)"
+    "    removeUnusedVariables(genDataDecl)\n",
+    "    commonSubexpressionElimination()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The `removeUnusedProcedures` function process the global instruction block, looking for any subroutines. We do this by reading all of the instructions in order, looking for jump and links (`jal` instructions). If we find a `jal`, we know that the memory location of the linked procedure gets read and therefore, must be maintained.\n",
     "\n",
@@ -256,7 +260,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -274,7 +280,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Similar to `removeUnusedProcedures`, the `recursiveProcedureSearch` function process the procedure instructions block, looking for any additional subroutines. We do this by reading all of the instructions of the current procedure in order, looking for jump and links (`jal` instructions). If we find a `jal`, we know that the memory location of the linked procedure also gets read and therefore, must be maintained.\n",
     "\n",
@@ -285,7 +294,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -533,7 +544,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Common subexpression elimination\n",
     "The basic logic for this area is as follows:\n",
@@ -605,12 +619,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "def commonSubExpressionElimination():\n",
-    "    pass"
+    "def commonSubexpressionElimination():\n",
+    "    print(\"TODO\")"
    ]
   },
   {
@@ -1524,7 +1540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
