added method for comparing optimized output to original output

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "### P0 Code Generator for MIPS\n",
     "#### Emil Sekerinski, March 2017\n",
+    "#### Modified by Dom DiPasquale, Patrick Jakubowski, and Mustafa Haddara\n",
     "\n",
     "The generated code is kept in memory and all code generation procedures continuously append to that code: procedure `genProgStart` initializes the generator, then `gen`-prefixed procedures are to be called for P0 constructs as in order in which they are recognized by a recursive descent parser, and finally procedure `genProgExit` returns the generated code in assembly language as a string in a format that can be read in by the SPIM simulator. The generation procedures are:\n",
     "- `genBool`, `genInt`, `genRec`, `genArray`\n",
