initial explanation for dead store elim and unused var elim

--- a/jupyter/Final_Report.ipynb
+++ b/jupyter/Final_Report.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -83,69 +83,96 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO Dom fill in unused procedures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following example demonstrates dead store elimination. Notice that although we store the value `5` to variable `b`, we never read that value from that variable. Thus the `sw` operation is unneeded.\n",
+    "\n",
+    "Future work includes eliminating unused writes to registers, which would save instructions. However, since these writes are typically `add` or `addi` operations, the only savings we will see will be from fewer operations; `add` and `addi` operations are typically very quick instructions, especially compared to `sw` operations, which can take far longer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO fix this bug (we should allocate memory for `a`)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "compareOutput(\"\"\"program p;\n",
+    "    var a,b: integer;\n",
+    "    begin\n",
+    "        b := 4;\n",
+    "        a := 10 + b;\n",
+    "        b := 5;\n",
+    "        write(a)\n",
+    "    end\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following example demonstrates unused variable elimination. Not only do we not allocate space for variable `c`, we also perform the dead store elimination first, so we are able to detect that variable `b` is never used, so we are allowed to remove that memory declaration as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "compareOutput(\"\"\"program p;\n",
+    "    var a,b,c: integer;\n",
+    "    begin\n",
+    "        b := 4;\n",
+    "        a := 10;\n",
+    "        b := 5;\n",
+    "        write(a)\n",
+    "    end\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO Pat fill in CSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following examples demonstrate all of the optimizations working in conjunction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TODO\n",
-      "Orginal Compiler              | Optmized Compiler\n",
-      "        .data                 | \t.data\n",
-      "w_:     .space 40             | \t.text\n",
-      "b_:     .space 4              | \t.globl q\n",
-      "c_:     .space 4              | \t.ent q\n",
-      "        .text                 | q:\t\n",
-      "        .globl q              | \tsub $fp, $sp, 4\n",
-      "        .ent q                | \tsub $sp, $fp, 16\n",
-      "q:                            | \taddi $t6, $0, 1\n",
-      "        sw $fp, -8($sp)       | \taddi $t3, $0, 9\n",
-      "        sw $ra, -12($sp)      | \taddi $t0, $0, 5\n",
-      "        sub $fp, $sp, 4       | \taddi $t2, $0, 2\n",
-      "        sub $sp, $fp, 36      | \tadd $sp, $fp, 4\n",
-      "        addi $t6, $0, 1       | \tlw $ra, -8($fp)\n",
-      "        sw $t6, b_            | \tlw $fp, -4($fp)\n",
-      "        addi $t3, $0, 9       | \tjr $ra\n",
-      "        sw $t3, -28($fp)      | \t.globl main\n",
-      "        addi $t0, $0, 5       | \t.ent main\n",
-      "        sw $t0, -24($fp)      | main:\t\n",
-      "        addi $t2, $0, 2       | \taddi $t8, $0, 9\n",
-      "        sw $t2, -28($fp)      | \taddi $t1, $0, 5\n",
-      "        add $sp, $fp, 4       | \taddi $t4, $0, 10\n",
-      "        lw $ra, -8($fp)       | \tsw $t4, c_\n",
-      "        lw $fp, -4($fp)       | \tlw $t5, c_\n",
-      "        jr $ra                | \tadd $t5, $t5, 1\n",
-      "        .text                 | \tsw $t5, c_\n",
-      "        .globl main           | \tlw $a0, c_\n",
-      "        .ent main             | \tli $v0, 1\n",
-      "main:                         | \tsyscall\n",
-      "        addi $t8, $0, 9       | \tla $t7, c_\n",
-      "        sw $t8, w_+4          | \tjal, q\n",
-      "        addi $t1, $0, 5       | \tli $v0, 10\n",
-      "        sw $t1, w_+8          | \tsyscall\n",
-      "        addi $t4, $0, 10      | \t.end main\n",
-      "        sw $t4, c_            | \n",
-      "        lw $t5, c_            | \n",
-      "        add $t5, $t5, 1       | \n",
-      "        sw $t5, c_            | \n",
-      "        lw $a0, c_            | \n",
-      "        li $v0, 1             | \n",
-      "        syscall               | \n",
-      "        la $t7, c_            | \n",
-      "        sw $t7, -4($sp)       | \n",
-      "        jal, q                | \n",
-      "        li $v0, 10            | \n",
-      "        syscall               | \n",
-      "        .end main             | \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "compareOutput(\"\"\"program p;\n",
     "      type T = record d,e,f:integer end;\n",
