unused variables for global vars and procedures

--- a/jupyter/CGopts.ipynb
+++ b/jupyter/CGopts.ipynb
@@ -58,7 +58,9 @@
     "   - a target (for branch and jump instructions)\n",
     "- `compiledProcedures` is a list of post-optimization procedure mips instructions; these will be inserted into the program after we're done all of the optimizations\n",
     "- `fieldVars` is a list of dicts, with the keys being the names of fields in records, and the keys being their placeholder variable names. See [`genSelect()`](#gen-select) for more details.\n",
-    "- `usedGlobalVars` is a single map of names of global variables to a boolean flag which is `True` if they are used and `False` otherwise."
+    "- `usedGlobalVars` is a single map of names of global variables to a boolean flag which is `True` if they are used and `False` otherwise.\n",
+    "- `globalVarSizes` is a map of name of global variable to its required size.\n",
+    "- `globalDeclarations` is a list of global variable initialization instructions"
    ]
   },
   {
@@ -82,7 +84,7 @@
    "outputs": [],
    "source": [
     "def genProgStart():\n",
-    "    global declarations, instructions, compiledProcedures, procNames, fieldVars, usedGlobalVars\n",
+    "    global declarations, instructions, compiledProcedures, procNames, fieldVars, usedGlobalVars, globalVarSizes, globalDeclarations\n",
     "    global curlev, label, vname, regs, writtenText\n",
     "    declarations = [ [] ]\n",
     "    instructions = [ [] ]\n",
@@ -90,6 +92,8 @@
     "    procNames = []\n",
     "    fieldVars = [ {} ]\n",
     "    usedGlobalVars  = {}\n",
+    "    globalVarSizes = {}\n",
+    "    globalDeclarations = []\n",
     "    curlev = 0\n",
     "    label = 0\n",
     "    vname = 0\n",
@@ -123,7 +127,8 @@
     "        if type(sc[i]) == Var:\n",
     "            sc[i].adr = sc[i].name + '_'\n",
     "            declarations[curlev].append( (sc[i].adr, sc[i].tp.size) )\n",
-    "            usedGlobalVars[sc[i].adr] = False"
+    "            usedGlobalVars[sc[i].adr] = False\n",
+    "            globalVarSizes[sc[i].adr] = sc[i].tp.size"
    ]
   },
   {
@@ -206,7 +211,7 @@
    "outputs": [],
    "source": [
     "def combineInstructions():\n",
-    "    prelude = [instructions[curlev][0]] + declarations[curlev] + [('', '.text', '')]\n",
+    "    prelude = [instructions[curlev][0]] + globalDeclarations + [('', '.text', '')]\n",
     "    for proc in compiledProcedures:\n",
     "        prelude += proc\n",
     "    prelude += instructions[curlev][1:]\n",
@@ -239,7 +244,7 @@
     "def runOptimizations():\n",
     "    removeUnusedProcedures()\n",
     "    deadStoreElimination()\n",
-    "    removeUnusedVariables(genDataDecl)\n",
+    "    removeUnusedVariables()#genDataDecl)\n",
     "    commonSubexpressionElimination()"
    ]
   },
@@ -328,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -341,7 +346,7 @@
     "    instructions[curlev] = deadStoreEliminationFromBlock(instructions[curlev])\n",
     "    newCompiledProcedures = []\n",
     "    for compiledProc in compiledProcedures:\n",
-    "        newCompiledProcedures.append(deadStoreEliminationFromBlock(compiledProc))\n",
+    "        newCompiledProcedures.append(deadStoreEliminationFromBlock(compiledProc, True))\n",
     "    compiledProcedures = newCompiledProcedures"
    ]
   },
@@ -366,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -374,7 +379,7 @@
    },
    "outputs": [],
    "source": [
-    "def deadStoreEliminationFromBlock(block):\n",
+    "def deadStoreEliminationFromBlock(block, insideProc=False):\n",
     "    readAddresses = {}\n",
     "    result = []\n",
     "    for elem in block[::-1]:\n",
@@ -389,8 +394,9 @@
     "            # this is a write\n",
     "            t,reg,loc = ins.split()\n",
     "            # if we're writing here and we've read from it before, keep the instruction\n",
+    "            # or if it's a global variable and we're inside a procedure\n",
     "            # otherwise we discard it\n",
-    "            if loc in readAddresses and readAddresses[loc]:\n",
+    "            if (loc in readAddresses and readAddresses[loc]) or (loc in usedGlobalVars and insideProc):\n",
     "                result.append(elem)\n",
     "                readAddresses[loc] = False\n",
     "        else:\n",
@@ -410,36 +416,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "def removeUnusedVariables(f):\n",
-    "    global declarations, usedGlobalVars\n",
+    "def removeUnusedVariables():\n",
+    "    global declarations, usedGlobalVars, globalDeclarations\n",
     "    currentInstructions = instructions[curlev]\n",
     "    temp = []\n",
+    "    temp0 = []\n",
     "    completed = []\n",
     "    realAddrs = {}\n",
     "    s = 0\n",
     "    for i in range(len(currentInstructions)):\n",
-    "        (l,ins,target) = currentInstructions[i]    \n",
+    "        (l,ins,target) = currentInstructions[i]\n",
+    "        for name in usedGlobalVars:\n",
+    "            if name in ins or (type(target) == str and name in target):\n",
+    "                if not usedGlobalVars[name]:\n",
+    "                    usedGlobalVars[name] = True\n",
+    "                    temp0.append( genDataDecl( (name, globalVarSizes[name]) ) )\n",
     "        for decl in declarations[curlev]:\n",
     "            name = decl[0]\n",
     "            size = decl[1]\n",
     "            if name in completed: continue\n",
-    "            if name in usedGlobalVars or name in ins or (type(target) == str and name in target):\n",
+    "            if name in ins or (type(target) == str and name in target):\n",
     "                completed.append(name)\n",
     "                s = s + size\n",
     "                realAddrs[name] = -s - 8\n",
-    "                if name not in usedGlobalVars:\n",
-    "                    temp.append( f(decl) )\n",
-    "                elif not usedGlobalVars[name]:\n",
-    "                    usedGlobalVars[name] = True\n",
+    "                temp.append( genProcDecl(decl) )\n",
     "    declarations[curlev] = temp\n",
+    "    globalDeclarations = globalDeclarations + temp0\n",
     "    return realAddrs,s"
    ]
   },
@@ -850,7 +860,7 @@
     "    putInstr('jr $ra')            # return\n",
     "    \n",
     "    # apply optimizations\n",
-    "    realAddresses,localsize = removeUnusedVariables(genProcDecl)\n",
+    "    realAddresses,localsize = removeUnusedVariables()\n",
     "    processProcInstructions(realAddresses, localsize)\n",
     "\n",
     "    # remove declarations, instructions for the procedure we're exiting\n",
